--- a/_posts/2015-12-05-test.markdown
+++ b/_posts/2015-12-05-test.markdown
@@ -12,3 +12,5 @@ image: img-concept.png
 Jacob Guter from Facilities Management has been hard at work with his team coming up with these awesome plans for the space. It's divided into a few working sections with plenty of space to hang out, collaborate, and create awesome things.
 
 ![Check out the floorplans](/img/img-concept.png)
+
+Now we are working with contractors to get quotes for the expected renovation costs in order to move forward with securing funding and starting rennovations.
