--- a/_projects/2016-02-13-welcome3.markdown
+++ b/_projects/2016-02-13-welcome3.markdown
@@ -1,10 +1,10 @@
 ---
 layout: project
-title:  "1980 CB650C Brat Build"
+title:  "Motorcycle project 2"
 date:   2016-02-13 19:52:30 -0800
 categories: Wrenching, Design
 author: Russ Crofton
-description: Take a 80's stock motorcycle and turn it into a personalized riding machine.
+description: Another project.
 image: /projects/2016-02-13-welcome.jpg
 ---
 
