--- a/_wikis/2016-10-18-events.markdown
+++ b/_wikis/2016-10-18-events.markdown
@@ -1,6 +1,6 @@
 ---
-layout: post
+layout: wiki
 title: Events
 date: 2016-10-18 07:00:00 -0800
-categories: coach-guide
+category: coach-guide
 ---
