--- a/_wikis/2016-10-18-advisors.markdown
+++ b/_wikis/2016-10-18-advisors.markdown
@@ -5,11 +5,11 @@ date: 2016-10-18 07:00:00 -0800
 category: coach-guide
 ---
 
-#### David Dixon
+##### David Dixon
 - Biosafety Officer, Compliance, Integrity, and Safety Officer
 
-#### Bob Hiltunen
+##### Bob Hiltunen
 - Director of Auxiliary Services
 
-#### Mary Raber
+##### Mary Raber
 - Assistant Dean of Academic Programs, Pavlis Honors College
